--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ flask==3.0.0
 flask-cors==4.0.0
 requests==2.31.0
 python-dotenv==1.0.0
+gunicorn==21.2.0
 
 # Document Processing
 python-docx==1.1.0        # DOCX extraction
