--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://agree-wise-backend.onrender.com/api
-VITE_BACKEND_URL=https://agree-wise-backend.onrender.com
+VITE_API_URL=https://agree-w1se.onrender.com/api
+VITE_BACKEND_URL=https://agree-w1se.onrender.com
