--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ flask-cors==4.0.0
 requests==2.31.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
+lingodotdev==1.3.0
 
 # Document Processing
 python-docx==1.1.0        # DOCX extraction
