--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
-VITE_API_URL=https://agree-w1se.onrender.com/api
-VITE_BACKEND_URL=https://agree-w1se.onrender.com
+# VITE_BACKEND_URL=https://agree-w1se.onrender.com
+# VITE_API_URL=https://agree-w1se.onrender.com/api
+
+VITE_API_URL=http://localhost:5001/api
+VITE_BACKEND_URL=http://localhost:5001
